added permissions to data file for processing/ removed locations
