# receiver/openapi.yaml
@@ -47,7 +47,6 @@ components:
         - deviceID
         - timeStamp
         - windspeed
-        - location
       properties:
         eventID:
           type: string
@@ -64,15 +63,6 @@ components:
           type: number
           format: float
           description: The measured wind speed.
-        location:
-          type: object
-          properties:
-            latitude:
-              type: number
-              description: Latitude of the location.
-            longitude:
-              type: number
-              description: Longitude of the location.
     TemperatureEvent:
       type: object
       required:
